[gd_scene load_steps=28 format=1]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://Images/BG_Green_Win.png" type="Texture" id=3]
[ext_resource path="res://Images/BG_Purple_Win.png" type="Texture" id=4]
[ext_resource path="res://Images/BG_Yellow_Win.png" type="Texture" id=5]
[ext_resource path="res://Images/Game_UI.png" type="Texture" id=6]
[ext_resource path="res://Images/Thinking_Sel.png" type="Texture" id=7]
[ext_resource path="res://Images/ProgressLeftFG.png" type="Texture" id=8]
[ext_resource path="res://Images/Progress.png" type="Texture" id=9]
[ext_resource path="res://Images/ProgressCenterFG.png" type="Texture" id=10]
[ext_resource path="res://Images/ProgressRightFG.png" type="Texture" id=11]
[ext_resource path="res://Images/CYM_Sel.png" type="Texture" id=12]
[ext_resource path="res://Images/ProgressPurpleFG.png" type="Texture" id=13]
[ext_resource path="res://Images/ProgressYellowFG.png" type="Texture" id=14]
[ext_resource path="res://Images/ProgressGreenFG.png" type="Texture" id=15]
[ext_resource path="res://Images/Fight.png" type="Texture" id=16]
[ext_resource path="res://Scripts/Moves.gd" type="Script" id=17]
[ext_resource path="res://Images/Selection_UI.png" type="Texture" id=18]
[ext_resource path="res://Images/Attack_Normal.png" type="Texture" id=19]
[ext_resource path="res://Images/Defend_Normal.png" type="Texture" id=20]
[ext_resource path="res://Images/Grapple_Normal.png" type="Texture" id=21]
[ext_resource path="res://Images/Mod_Green_Selectde.png" type="Texture" id=22]
[ext_resource path="res://Images/Mod_Yellow_Selected.png" type="Texture" id=23]
[ext_resource path="res://Images/Mod_Purple_Selected.png" type="Texture" id=24]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=25]
[ext_resource path="res://Scripts/AI.gd" type="Script" id=26]
[ext_resource path="res://Scripts/rpsAI.gd" type="Script" id=27]

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 2 )
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="BG_Green" type="TextureFrame" parent="UI"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 176.0
margin/right = 360.0
margin/bottom = 1568.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="BG_Purple" type="TextureFrame" parent="UI"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 176.0
margin/right = 540.0
margin/bottom = 1568.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="BG_Yellow" type="TextureFrame" parent="UI"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 176.0
margin/right = 720.0
margin/bottom = 1568.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="Template" type="Sprite" parent="UI"]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
centered = false
__meta__ = { "_edit_lock_":true }

[node name="ProgressBar" type="ProgressBar" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 144.0
margin/right = 520.0
margin/bottom = 160.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="Wins" type="Label" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 63.0
margin/right = 176.0
margin/bottom = 128.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ties" type="Label" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 64.0
margin/right = 336.0
margin/bottom = 129.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Loss" type="Label" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 368.0
margin/top = 64.0
margin/right = 496.0
margin/bottom = 129.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AI" type="Control" parent="UI"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="S1" type="TextureFrame" parent="UI/AI"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 248.0
margin/right = 152.0
margin/bottom = 376.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="ProgressBar" type="TextureProgress" parent="UI/AI/S1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -48.0
margin/right = 256.0
margin/bottom = -16.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 8 )
texture/over = null
texture/progress = ExtResource( 9 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Text" type="RichTextLabel" parent="UI/AI/S1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 136.0
margin/right = 128.0
margin/bottom = 240.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="S2" type="TextureFrame" parent="UI/AI"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 248.0
margin/right = 336.0
margin/bottom = 376.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="ProgressBar" type="TextureProgress" parent="UI/AI/S2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -48.0
margin/right = 256.0
margin/bottom = -16.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 10 )
texture/over = null
texture/progress = ExtResource( 9 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Text" type="RichTextLabel" parent="UI/AI/S2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 136.0
margin/right = 128.0
margin/bottom = 240.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="S3" type="TextureFrame" parent="UI/AI"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 392.0
margin/top = 248.0
margin/right = 649.0
margin/bottom = 505.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="ProgressBar" type="TextureProgress" parent="UI/AI/S3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -48.0
margin/right = 256.0
margin/bottom = -16.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 11 )
texture/over = null
texture/progress = ExtResource( 9 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Text" type="RichTextLabel" parent="UI/AI/S3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 136.0
margin/right = 128.0
margin/bottom = 240.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = { "_edit_lock_":true }

[node name="Player" type="Control" parent="UI"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 540.0
margin/bottom = 960.0
__meta__ = { "_edit_group_":true }

[node name="S1" type="TextureButton" parent="UI/Player"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 600.0
margin/right = 161.0
margin/bottom = 729.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
params/scale = Vector2( 0.5, 0.5 )

[node name="ProgressBar" type="TextureProgress" parent="UI/Player/S1"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -24.0
margin/right = 256.0
margin/bottom = 8.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 13 )
texture/over = null
texture/progress = ExtResource( 9 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Player/S1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 136.0
margin/right = 128.0
margin/bottom = 240.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="S2" type="TextureButton" parent="UI/Player"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 600.0
margin/right = 336.0
margin/bottom = 728.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
params/scale = Vector2( 0.5, 0.5 )

[node name="ProgressBar" type="TextureProgress" parent="UI/Player/S2"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -24.0
margin/right = 256.0
margin/bottom = 8.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 14 )
texture/over = null
texture/progress = ExtResource( 9 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Player/S2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 136.0
margin/right = 128.0
margin/bottom = 240.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="S3" type="TextureButton" parent="UI/Player"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 383.0
margin/top = 599.0
margin/right = 512.0
margin/bottom = 728.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
params/scale = Vector2( 0.5, 0.5 )

[node name="ProgressBar" type="TextureProgress" parent="UI/Player/S3"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = -23.0
margin/right = 257.0
margin/bottom = 9.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 15 )
texture/over = null
texture/progress = ExtResource( 9 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Player/S3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 137.0
margin/right = 129.0
margin/bottom = 241.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="Tween" type="Tween" parent="UI"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Fight" type="TextureButton" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 196.0
margin/top = 880.0
margin/right = 349.0
margin/bottom = 928.0
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
textures/normal = ExtResource( 16 )
params/scale = Vector2( 0.5, 0.5 )

[node name="Moves" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 540.0
margin/bottom = 960.0
script/script = ExtResource( 17 )
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="BG" type="TextureFrame" parent="Moves"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1080.0
margin/bottom = 1920.0
texture = ExtResource( 18 )
stretch_mode = 0

[node name="X" type="TextureButton" parent="Moves"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 208.0
margin/right = 360.0
margin/bottom = 497.0
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
textures/normal = ExtResource( 19 )

[node name="O" type="TextureButton" parent="Moves"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 208.0
margin/right = 540.0
margin/bottom = 497.0
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
textures/normal = ExtResource( 20 )

[node name="A" type="TextureButton" parent="Moves"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 208.0
margin/right = 720.0
margin/bottom = 497.0
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
textures/normal = ExtResource( 21 )

[node name="Mod1" type="TextureButton" parent="Moves"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 448.0
margin/right = 180.0
margin/bottom = 904.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 22 )
params/scale = Vector2( 0.5, 0.5 )

[node name="Mod2" type="TextureButton" parent="Moves"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 448.0
margin/right = 354.0
margin/bottom = 904.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 23 )
params/scale = Vector2( 0.5, 0.5 )

[node name="Mod3" type="TextureButton" parent="Moves"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 364.0
margin/top = 448.0
margin/right = 528.0
margin/bottom = 904.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 24 )
params/scale = Vector2( 0.5, 0.5 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Player" type="Node" parent="."]

script/script = ExtResource( 25 )

[node name="AI" type="Node" parent="."]

script/script = ExtResource( 26 )

[node name="RPS" type="Node" parent="AI"]

script/script = ExtResource( 27 )

[connection signal="pressed" from="UI/Player/S1" to="UI" method="_on_Player_S1_pressed"]

[connection signal="pressed" from="UI/Player/S2" to="UI" method="_on_Player_S2_pressed"]

[connection signal="pressed" from="UI/Player/S3" to="UI" method="_on_Player_S3_pressed"]

[connection signal="pressed" from="UI/Fight" to="UI" method="_on_Fight_pressed"]

[connection signal="pressed" from="Moves/X" to="Moves" method="_on_X_pressed"]

[connection signal="pressed" from="Moves/O" to="Moves" method="_on_O_pressed"]

[connection signal="pressed" from="Moves/A" to="Moves" method="_on_A_pressed"]


